--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <hr>
   <div class="contact-me">
     <h2> Get In Touch  </h2>
-    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-    <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <h3>If you like to explore the Digital World?</h3>
+    <p class="contact-message">Do you Like Financial Analysis, Wish to be a Data Science Expert, or interested in Web Development? Let's talk how awesome they are! We can discuss while exploring!</p>
     <a class="btn" href="mailto:hzahid212@gmail.com">CONTACT ME</a>
   </div>
 </div>
