--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
   <div class="contact-me">
     <h2> Get In Touch  </h2>
     <h3>If you like to explore the Digital World?</h3>
-    <p class="contact-message">Do you Like Financial Analysis, Wish to be a Data Science Expert, or interested in Web Development? Let's talk how awesome they are! We can discuss while exploring!</p>
+    <p class="contact-message">Do you Like Financial Analysis, 
+      Wish to be a Data Science Expert, or interested in Web Development? 
+      Let's talk how awesome they are! 
+      We can discuss while exploring!waiting for a Kacchi!
+      Let's Explore!!</p>
     <a class="btn" href="mailto:hzahid212@gmail.com">CONTACT ME</a>
   </div>
 </div>
