--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <div class="skill-row">
       <img class="Website" src="images/programming.png" alt="Website">
       <h3>Web Development</h3>
-      <p class="Web-Development-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      <p class="Web-Development-description">In 2020, I started learning Web Development with HTML5 AND CSS3. 
+        I thought it's a compulsary skill for me since I wish to be a Tech Entreprenuer. Besides a good comand over web Development will help me to earn money through building websites. 
+        currently, I am a front end Developer with expertises in HTML, CSS, Bootstrap and Javascript. However, the journey won't stop here I want to be a Full Stack Web Developer.Thus, I am learning the Back end Development and server site programme.</p>
     </div>
   </div>
   <hr>
