--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
   <div class="profile">
-    <img class="Zahid"src="images/Zahid.png" alt="Zahid">
+    <img class="Zahid"src="images/Zahid.jpg" alt="Zahid">
     <h2>Hello.</h2>
     <p class="intro">I am a financial analyst, a Front End web Developer, and a Data science Enthusiast. I ❤ Kacchi Biryani.</p>
   </div>
