--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p class="contact-message">Do you Like Financial Analysis, 
       Wish to be a Data Science Expert, or interested in Web Development? 
       Let's talk how awesome they are! 
-      We can discuss while exploring!waiting for a Kacchi!
+      We can discuss while having a Coffee!
       Let's Explore!!</p>
     <a class="btn" href="mailto:hzahid212@gmail.com">CONTACT ME</a>
   </div>
