--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="Cloud">
       <h1>I'm Zahid</h1>
-      <h2>a financial Analyst</h2>
+      <h2>an explorer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
       <img class="land" src="images/land.svg" alt="mountain">
     </div>
