--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="profile">
     <img class="Zahid"src="images/Zahid.jpg" alt="Zahid">
     <h2>Hello.</h2>
-    <p class="intro">I am finance enthusiast, a Front End web Developer, and a Data science Enthusiast. I ❤ Kacchi Biryani.</p>
+    <p class="intro">I am finance enthusiast, a Front End web Developer, and a techlover. I ❤ Kacchi Biryani.</p>
   </div>
   <hr>
   <div class="skills">
